# atsame53_example_app

./: .gitignore  CMakeLists.txt  README.md  config.cmake.example
config/: hpl_ac_config.h  peripheral_clk_config.h
src/: atmel_start.c  atmel_start.h  atmel_start_pins.h  driver_init.c  driver_init.h  ethernet_phy_main.c  main.c  startup_same53.c  system_same53.c
